more changes to layout

--- a/index.html
+++ b/index.html
@@ -352,9 +352,9 @@
         - #RESUME
       -->
 
-      <article class="resume active" data-page="resume">
+      <article class="active" data-page="resume">
         <header>
-          <h2 class="h2 article-title">Resume</h2>
+          <h2 class="h2 article-title gold">Resume</h2>
         </header>
 
         <section class="timeline">
@@ -368,7 +368,7 @@
           <ol class="timeline-list">
             <li class="timeline-item">
               <h2 class="h4 timeline-item-title">Full Resume Link</h2>
-              <a class="resume" href="assets/images/David_Resume5_10.pdf">View Full Resume</a>
+              <a class="gold asset-link" href="assets/images/David_Resume5_10.pdf">View Full Resume</a>
             </li>
 
             <li class="timeline-item">
@@ -398,11 +398,9 @@
         </section>
         <section class="career-foundry" style="padding-top: 40px;">
           <header>
-            <h2 class="h2 article-title">CareerFoundry - Advanced Python Bootcamp</h2>
+            <h2 class="h2 article-title gold">CareerFoundry - Advanced Python Bootcamp</h2>
           </header>
-          <a class="resume" href="./assets/images/CareerFoundry_Certificate_David McNeill.pdf" download target="_blank"
-            style="text-align: center; align-items: center; justify-content: center;">Click for Certificate of Course
-            Completion</a>
+
           <br>
           <section class="timeline">
             <div class="title-wrapper">
@@ -412,6 +410,19 @@
               <h3 class="h3">Course Applications</h3>
             </div>
             <ol class="timeline-list">
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">Full Course Info</h4>
+                <a class="gold asset-link" href="./assets/images/CareerFoundry_Certificate_David McNeill.pdf" download
+                  target="_blank">Click for
+                  Certificate of Course
+                  Completion</a>
+                <a class="gold asset-link" href="https://https://github.com/dlm1337/careerfoundry-python-course"
+                  style="padding-top: 20px;" target="_blank">
+                  <p class="gold asset-link">Full Course Github Repo - Click to visit</p>
+                </a>
+              </li>
+
+
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Recipe App Live</h4>
                 <span>7/2023</span>
@@ -434,14 +445,13 @@
                   Visit the recipe app website/check out the github to follow README.md for instructions on using the
                   website.
                 </p>
-                <a href="https://serene-eyrie-98382-920f167cb9ee.herokuapp.com/" target="_blank"
+                <a class="gold asset-link" href="https://serene-eyrie-98382-920f167cb9ee.herokuapp.com/" target="_blank"
                   style="padding-top: 20px;">
-                  <h3 class="project-title" style="color: rgb(184, 184, 69)">Recipe App</h3>
-                  <p class="project-category">Recipe App Heroku Site - Click to visit</p>
+                  <p class="gold asset-link">Recipe App Heroku Site - Click to visit</p>
                 </a>
-                <a href="https://github.com/dlm1337/recipe-app" style="padding-top: 20px;" target="_blank">
-                  <h3 class="project-title" style="color: rgb(184, 184, 69)">Github</h3>
-                  <p class="project-category">Github Repo - Click to visit</p>
+                <a class="gold asset-link" href="https://github.com/dlm1337/recipe-app" style="padding-top: 20px;"
+                  target="_blank">
+                  <p class="gold asset-link">Github Repo - Click to visit</p>
                 </a>
 
               </li>
@@ -455,7 +465,8 @@
                   identification of any unexpected outcomes. Click the link below to see some of the planning
                   and work flow for the recipe app, including admin recipe creation.
                 </p>
-                <a href="./assets/images/Charts-Flows.zip" download style="padding-top: 20px;">Download Assets</a>
+                <a class="gold asset-link" href="./assets/images/Charts-Flows.zip" download
+                  style="padding-top: 20px;">Download Assets</a>
                 <div class="row" style="display: flex;">
                   <img src="./assets/images/Charts-Flows/recipe-app-schema.jpg" class="careerfoundry-image"
                     alt="Flow Chart" loading="lazy" style="padding-top: 25px; width: 40%" />
@@ -481,8 +492,7 @@
                   pillow. The Bookstore Github repo is below.
                 </p>
                 <a href="https://github.com/dlm1337/bookstore" style="padding-top: 20px;" target="_blank">
-                  <h3 class="project-title" style="color: rgb(184, 184, 69)">Github</h3>
-                  <p class="project-category">Githup Repo - Click to visit</p>
+                  <p class="gold asset-link">Githup Repo - Click to visit</p>
                 </a>
                 <img src="./assets/images/Bookstore_Heroku_App.jpg" alt="music" loading="lazy"
                   class="careerfoundry-image" />
@@ -506,13 +516,17 @@
                   Technologies used: Python, Django, SQLAlchemy, MySQLclient, Ipython, SQLite. Screenshots of app
                   use/Github below.
                 </p>
-                <a href="./assets/images/Recipe-Console-App.zip" download style="padding-top: 20px;">Download Assets</a>
 
                 <a href="https://github.com/dlm1337/careerfoundry-python-course/tree/main/Achievement%201/exercise1.7/Exercise%201.7-Task"
-                  style="padding-top: 20px;" target="_blank">
-                  <h3 class="project-title" style="color: rgb(184, 184, 69)">Github</h3>
-                  <p class="project-category">Github Repo - Click to visit</p>
+                  target="_blank">
+                  <p class="gold asset-link" style="padding-top: 20px;">Github Repo - Click to visit</p>
                 </a>
+                <a class="gold asset-link" href="./assets/images/Recipe-Console-App.zip" download
+                  style="padding-top: 20px;">Download Assets
+                </a>
+
+
+
 
                 <img src="./assets/images/Recipe-Console-App/step3.png" alt="music" loading="lazy"
                   class="careerfoundry-image" />
@@ -657,7 +671,7 @@
       </div>
       <article class="portfolio" data-page="portfolio">
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title gold">Portfolio</h2>
         </header>
 
         <section class="projects">
@@ -769,7 +783,7 @@
 
       <article class="contact" data-page="location">
         <header>
-          <h2 class="h2 article-title">Location</h2>
+          <h2 class="h2 article-title gold">Location</h2>
         </header>
 
         <section class="mapbox" data-mapbox>
