--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                   target="_blank">Click for
                   Certificate of Course
                   Completion</a>
-                <a class="gold asset-link" href="https://https://github.com/dlm1337/careerfoundry-python-course"
+                <a class="gold asset-link" href="https://github.com/dlm1337/careerfoundry-python-course"
                   style="padding-top: 20px;" target="_blank">
                   <p class="gold asset-link">Full Course Github Repo - Click to visit</p>
                 </a>
