--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link onclick="resetSidebar()">Resume</button>
           </li>
-
+          <li class="navbar-item">
+            <button class="navbar-link" data-nav-link onclick="resetSidebar()">Bootcamp</button>
+          </li>
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link onclick="resetSidebar()">Portfolio</button>
           </li>
@@ -354,7 +356,7 @@
 
       <article class="active" data-page="resume">
         <header>
-          <h2 class="h2 article-title gold">Resume</h2>
+          <h2 class="h2 article-title yellow-gold">Resume</h2>
         </header>
 
         <section class="timeline">
@@ -396,11 +398,13 @@
 
           </ol>
         </section>
-        <section class="career-foundry" style="padding-top: 40px;">
-          <header>
-            <h2 class="h2 article-title gold">CareerFoundry - Advanced Python Bootcamp</h2>
-          </header>
+      </article>
 
+      <article class="bootcamp" data-page="bootcamp">
+        <section class="career-foundry">
+          <header>
+            <h2 class="h2 article-title yellow-gold">Bootcamp</h2>
+          </header>
           <br>
           <section class="timeline">
             <div class="title-wrapper">
@@ -412,12 +416,13 @@
             <ol class="timeline-list">
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Full Course Info</h4>
-                <a class="gold asset-link" href="./assets/images/CareerFoundry_Certificate_David McNeill.pdf" download
-                  target="_blank">Click for
-                  Certificate of Course
-                  Completion</a>
-                <a class="gold asset-link" href="https://github.com/dlm1337/careerfoundry-python-course"
-                  style="padding-top: 20px;" target="_blank">
+                <a href="./assets/images/CareerFoundry_Certificate_David McNeill.pdf" download target="_blank">
+                  <p class="gold asset-link">Click for
+                    Certificate of Course Completion</p>
+
+                </a>
+                <a href="https://github.com/dlm1337/careerfoundry-python-course" style="padding-top: 20px;"
+                  target="_blank">
                   <p class="gold asset-link">Full Course Github Repo - Click to visit</p>
                 </a>
               </li>
@@ -539,7 +544,6 @@
           </section>
       </article>
 
-
       <!-- <section class="skill">
           <h3 class="h3 skills-title">Language Aptitude</h3>
 
@@ -654,8 +658,8 @@
               </div>
             </li>
           </ul>
-        </section> -->
-      </article>
+        </section>
+      </article> -->
 
       <!--
         - #PORTFOLIO
@@ -671,7 +675,7 @@
       </div>
       <article class="portfolio" data-page="portfolio">
         <header>
-          <h2 class="h2 article-title gold">Portfolio</h2>
+          <h2 class="h2 article-title yellow-gold">Portfolio</h2>
         </header>
 
         <section class="projects">
@@ -765,11 +769,10 @@
                   <img src="./assets/images/bleachss.png" alt="manos" loading="lazy" />
                 </figure>
 
+                <h3 class="project-title">Bleached Solultions</h3>
+
                 <a href="https://bleachedsolutions.com">
-                  <h3 class="project-title" style="color: rgb(184, 184, 69)">Bleached Solultions</h3>
-
-
-                  <p class="project-category">Main site - Click to visit</p>
+                  <p class="gold asset-link">Website - Click to visit</p>
                 </a>
               </a>
             </li>
@@ -783,7 +786,7 @@
 
       <article class="contact" data-page="location">
         <header>
-          <h2 class="h2 article-title gold">Location</h2>
+          <h2 class="h2 article-title yellow-gold">Location</h2>
         </header>
 
         <section class="mapbox" data-mapbox>
@@ -797,6 +800,12 @@
       </article>
 
       <article class="game" data-page="game">
+        <header>
+          <header>
+            <h2 class="h2 article-title yellow-gold">Game</h2>
+          </header>
+
+        </header>
         <div style="padding-top: 100px; width: 100%;">
           <iframe src="assets/game/Laser2.0webgl/index.html" width="100%" height="720px"></iframe>
         </div>
