meta data for linking to posts.

--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>portfolio - David McNeill</title>
 
-  <!--
-     Icon by IYIKON on freeicons.io
-  -->
+  <!-- Icon by IYIKON on freeicons.io -->
   <link rel="shortcut icon" href="./assets/images/shortcut-icon.svg" type="image/x-icon" />
 
-  <!--
-    - custom css link
-  -->
+  <!-- Custom CSS link -->
   <link rel="stylesheet" href="./assets/css/style.css" />
 
-  <!--
-    - google font link
-  -->
+  <!-- Google font link -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
+
+  <!-- Open Graph meta tags for LinkedIn -->
+  <meta property="og:title" content="portfolio - David McNeill" />
+  <meta property="og:description"
+    content="Overview of career and learning. Game included!(not currently working properly on mobile)" />
+  <meta property="og:image" content="https://dlm1337.github.io/assets/images/dlm1337.png" />
+  <meta property="og:url" content="https://dlm1337.github.io/" />
+  <meta property="og:type" content="website" />
 </head>
 
 <body>
