trying to fix game

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
         </section>
       </article>
 
-      <article class="game" data-page="game">
+      <article class="game game-article" data-page="game">
         <header>
           <header>
             <h2 class="h2 article-title gold">Game</h2>
