--- a/index.html
+++ b/index.html
@@ -426,17 +426,17 @@
         </section>
       </article>
 
-      <article class="game game-article" data-page="game">
+      <div class="game" data-page="game">
         <header>
           <header>
             <h2 class="h2 article-title gold">Game</h2>
           </header>
 
         </header>
-        <div style="padding-top: 100px; width: 100%;">
+        <div style="padding-top: 40px; width: 100%;">
           <iframe src="assets/game/Laser2.0webgl/index.html" width="100%" height="720px"></iframe>
         </div>
-      </article>
+      </div>
     </div>
   </main>
   <script src="./assets/js/script.js"></script>
