--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 
         </header>
         <div style="padding-top: 60px; width: 100%;">
-          <iframe src="assets/game/Laser2.0webgl/index.html" width="100%" height="720px"></iframe>
+          <iframe src="assets/game/Laser2.0webgl/index.html"></iframe>
         </div>
       </article>
     </div>
