--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
           </header>
 
         </header>
-        <div style="padding-top: 60px; width: 100%;">
+        <div style="padding-top: 60px; width: 100%; height: 1200px;">
           <iframe src="assets/game/Laser2.0webgl/index.html" width="100%" height="100%"></iframe>
         </div>
       </article>
