--- a/assets/game/Laser2.0webgl/index.html
+++ b/assets/game/Laser2.0webgl/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="webgl-content" style="width: 100%; height: 100%">
-    <div id="unityContainer" style="display: inherit;"></div>
+    <div id="unityContainer" style="width: 100%; height: 100%"></div>
   </div>
 </body>
 
