--- a/index.html
+++ b/index.html
@@ -428,13 +428,12 @@
 
       <article class="game game-article" data-page="game">
         <header>
-          <header>
-            <h2 class="h2 article-title gold">Game</h2>
-          </header>
-
+          <h2 class="h2 article-title gold">Game</h2>
         </header>
-        <iframe src="assets/game/Laser2.0webgl/index.html" width="100%" height="100%"></iframe>
-
+        <div style="padding-top: 60px; width: 100%;">
+          <iframe src="assets/game/Laser2.0webgl/index.html"
+            style="width: 100% !important; height: 100% !important; border: none;"></iframe>
+        </div>
       </article>
     </div>
   </main>
