--- a/assets/game/Laser2.0webgl/index.html
+++ b/assets/game/Laser2.0webgl/index.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-  <div class="webgl-content" style="width: 100%; height: 100%">
-    <div id="unityContainer" style="width: 100%; height: 100%"></div>
+  <div class="webgl-content" style="width: 100%; height: 100vh;">
+    <div id="unityContainer" style="width: 100%; height: 100%;"></div>
   </div>
 </body>
 
