--- a/index.html
+++ b/index.html
@@ -430,9 +430,9 @@
         <header>
           <h2 class="h2 article-title gold">Game</h2>
         </header>
-        <div style="padding-top: 60px; width: 100%;">
-          <iframe src="assets/game/Laser2.0webgl/index.html"
-            style="width: 100% !important; height: 100% !important; border: none;"></iframe>
+        <div style="position: relative; padding-top: 56.25%; width: 100%;">
+          <iframe src="assets/game/Laser2.0webgl/index.html" frameborder="0" allowfullscreen
+            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
         </div>
       </article>
     </div>
