trying to get meta data good for posting.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
-  <meta property="og:title" content="portfolio - David McNeill" />
-  <meta property="og:description"
-    content="Overview of career and learning. Game included!(not currently working properly on mobile)" />
-  <meta property="og:image" content="https://dlm1337.github.io/assets/images/dlm1337.png" />
-  <meta property="og:url" content="https://dlm1337.github.io/" />
-  <meta property="og:type" content="website" />
+  <meta prefix="og: https://dlm1337.github.io/" property="og:title" content="David McNeill's Portfolio">
+  <meta prefix="og: https://dlm1337.github.io/" property="og:description"
+    content="Overview of career and learning achievements. Star shooter game included!(not currently working on mobile)">
+  <meta prefix="og: https://dlm1337.github.io/" property="og:image"
+    content="https://dlm1337.github.io/assets/images/dlm1337.png">
 </head>
 
 <body>
@@ -441,6 +440,6 @@
 
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-</body> 
+</body>
 
 </html>
