Working on the portfolio

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <ol class="timeline-list">
             <li class="timeline-item">
               <h2 class="h4 timeline-item-title">Full Resume Link</h2>
-              <a class="gold asset-link" href="assets/images/David_McNeill_RESUME5_14.pdf">View Full Resume</a>
+              <a class="gold asset-link" href="assets/images/David_M_RESUME5_14.pdf">View Full Resume</a>
             </li>
 
             <li class="timeline-item">
@@ -150,6 +150,18 @@
                 following the new design pattern. Containerized microservices using Docker and integrated them into
                 existing Jenkins builds. Additionally, assisted the senior developer with various tickets for Angular
                 frontend tweaks.
+              </p>
+            </li>
+
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Objective/Summary</h4>
+              <p class="timeline-text">
+                As a Full-Stack Developer, I specialize in building dynamic SPAs and effectively managing data. My
+                strengths lie in crafting top-notch user experiences through API integration, optimizing data handling,
+                and designing responsive UI/UX. I am adept at adapting to diverse project needs and am crucial for
+                testing and adhering to design patterns. I continue to grow as a developer by studying CI/CD best
+                practices using Docker, Jenkins, AWS, and Grafana. If hired, I will dedicate myself to learning the
+                Company's technology and adhering to its desired practices.
               </p>
             </li>
 
