--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 adhering
                 to design patterns. Continuing to grow as a developer by studying CI/CD best practices using Docker,
                 Jenkins, AWS, and Grafana. If hired, I will dedicate myself to learning the
-                Company's technology stack and put out my best effort to follow its desired practices.
+                company's technology stack and put out my best effort to follow its desired practices.
               </p>
             </li>
 
