--- a/index.html
+++ b/index.html
@@ -324,99 +324,89 @@
         <section class="projects">
           <ul class="project-list">
             <li class="project-item active" data-filter-item data-category="web development">
-              <a href="#">
-                <figure class="project-img" id="img1">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
+              <figure class="project-img" id="img1">
+                <div class="project-item-icon-box">
+                  <ion-icon name="eye-outline"></ion-icon>
+                </div>
 
-                  <img src="./assets/images/camel-ss.png" alt="music" loading="lazy" />
-                </figure>
+                <img src="./assets/images/camel-ss.png" alt="music" loading="lazy" />
+              </figure>
 
-                <h3 class="project-title">Live Music Archiver</h3>
+              <h3 class="project-title">Live Music Archiver</h3>
 
-                <p class="project-category">Chrome Extension based scraper</p>
+              <a href="https://github.com/dlm1337/live-music-archiver-extension">
+                <p class="gold asset-link">Github - Click to visit</p>
               </a>
             </li>
 
             <li class="project-item active" data-filter-item data-category="web development">
-              <a href="#">
-                <figure class="project-img" id="img2">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
+              <figure class="project-img" id="img2">
+                <div class="project-item-icon-box">
+                  <ion-icon name="eye-outline"></ion-icon>
+                </div>
 
-                  <img src="./assets/images/Animatior-link.png" alt="unity" loading="lazy" />
-                </figure>
+                <img src="./assets/images/Animatior-link.png" alt="unity" loading="lazy" />
+              </figure>
 
-                <h3 class="project-title">Unity</h3>
+              <h3 class="project-title">Unity</h3>
 
-                <p class="project-category">2D games</p>
-              </a>
+              <p class="project-category">2D games</p>
             </li>
 
             <li class="project-item active" data-filter-item data-category="web design">
-              <a href="#">
-                <figure class="project-img" id="img3">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
+              <figure class="project-img" id="img3">
+                <div class="project-item-icon-box">
+                  <ion-icon name="eye-outline"></ion-icon>
+                </div>
 
-                  <img src="./assets/images/prop12.jpg" alt="Appo" loading="lazy" />
-                </figure>
+                <img src="./assets/images/prop12.jpg" alt="Appo" loading="lazy" />
+              </figure>
 
-                <h3 class="project-title">APPO Retreats</h3>
+              <h3 class="project-title">APPO Retreats</h3>
 
-                <p class="project-category">Trip planning</p>
-              </a>
+              <p class="project-category">Trip planning</p>
             </li>
 
             <li class="project-item active" data-filter-item data-category="applications">
-              <a href="#">
-                <figure class="project-img" id="img4">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
+              <figure class="project-img" id="img4">
+                <div class="project-item-icon-box">
+                  <ion-icon name="eye-outline"></ion-icon>
+                </div>
 
-                  <img src="./assets/images/receipt.png" alt="receiptify" loading="lazy" />
-                </figure>
+                <img src="./assets/images/receipt.png" alt="receiptify" loading="lazy" />
+              </figure>
 
-                <h3 class="project-title">Receiptify</h3>
+              <h3 class="project-title">Receiptify</h3>
 
-                <p class="project-category">Reads images</p>
-              </a>
+              <p class="project-category">Reads images</p>
             </li>
 
             <li class="project-item active" data-filter-item data-category="web design">
-              <a href="#">
-                <figure class="project-img" id="img5">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
+              <figure class="project-img" id="img5">
+                <div class="project-item-icon-box">
+                  <ion-icon name="eye-outline"></ion-icon>
+                </div>
 
-                  <img src="./assets/images/ammo.png" alt="manos" loading="lazy" />
-                </figure>
+                <img src="./assets/images/ammo.png" alt="manos" loading="lazy" />
+              </figure>
 
-                <h3 class="project-title">Manos Ammo</h3>
+              <h3 class="project-title">Manos Ammo</h3>
 
-                <p class="project-category">Store stock and info</p>
-              </a>
+              <p class="project-category">Store stock and info</p>
             </li>
             <li class="project-item active" data-filter-item data-category="web design">
-              <a href="#">
-                <figure class="project-img" id="img6">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
+              <figure class="project-img" id="img6">
+                <div class="project-item-icon-box">
+                  <ion-icon name="eye-outline"></ion-icon>
+                </div>
 
-                  <img src="./assets/images/bleachss.png" alt="manos" loading="lazy" />
-                </figure>
+                <img src="./assets/images/bleachss.png" alt="manos" loading="lazy" />
+              </figure>
 
-                <h3 class="project-title">Bleached Solultions</h3>
+              <h3 class="project-title">Bleached Solultions</h3>
 
-                <a href="https://bleachedsolutions.com">
-                  <p class="gold asset-link">Website - Click to visit</p>
-                </a>
+              <a href="https://bleachedsolutions.com">
+                <p class="gold asset-link">Website - Click to visit</p>
               </a>
             </li>
           </ul>
