--- a/index.html
+++ b/index.html
@@ -437,6 +437,9 @@
           <iframe src="assets/game/Laser3.0webgl/index.html" frameborder="0" allowfullscreen
             style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
         </div>
+        <a class="gold asset-link" href="assets/game/Zelda_Not_For_Sale.zip">Building a Zelda Like Game - Do not let
+          this game keep running. It is not built to control memory usage.</a>
+
       </article>
     </div>
   </main>
