--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
           <iframe src="assets/game/Laser3.0webgl/index.html" frameborder="0" allowfullscreen
             style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
         </div>
-        <a class="gold asset-link" href="assets/game/UnityPlayer.zip">Building a Zelda Like Game - Click To See! </a>
+        <a class="gold asset-link" href="assets/game/Zelda.zip">Building a Zelda Like Game - Click To See! </a>
 
       </article>
     </div>
