--- a/index.html
+++ b/index.html
@@ -439,6 +439,9 @@
         </div>
         <a class="gold asset-link" href="assets/game/Zelda.zip">Building a Zelda Like Game - Click To See! </a>
 
+        <p class="project-category">
+          This will never be for sale; it is purely out of appreciation for the work of Nintendo.</p>
+
       </article>
     </div>
   </main>
