--- a/index.html
+++ b/index.html
@@ -438,10 +438,13 @@
             style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
         </div>
         <p>-------------------------------------------------------------------------</p>
+        <p>-------------------------------------------------------------------------</p>
+        <p>-------------------------------------------------------------------------</p>
         <a class="gold asset-link" href="assets/game/Zelda.zip">Building a Zelda Like Game - Click To See! </a>
 
         <p class="project-category">
-          This will never be for sale; it is purely out of appreciation for the work of Nintendo.</p>
+          This will never be for sale; it is purely out of appreciation for the work of Nintendo. Make Sure to Alt-Tab
+          close when you are done. It is not built to stop memory usage atm! IMPORTANT!</p>
 
       </article>
     </div>
