--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
         <p>-------------------------------------------------------------------------</p>
         <p>-------------------------------------------------------------------------</p>
         <p>-------------------------------------------------------------------------</p>
-        <a class="gold asset-link" href="assets/game/Zelda.zip">Building a Zelda Like Game - Click To See! </a>
+        <a class="gold asset-link" href="assets/game/Zelda.zip">Building a Zelda Like Game - READ BELOW 1st!!! Click To See! </a>
 
         <p class="project-category">
           This will never be for sale; it is purely out of appreciation for the work of Nintendo. Make Sure to Alt-Tab
