correcting the resume

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">
-                Freelance Work at Bleached Solutions
+               Contract Work at Bleached Solutions
               </h4>
               <span>Current</span>
               <p class="timeline-text">
