--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <nav class="navbar">
         <ul class="navbar-list">
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link onclick="resetSidebar()">Resume</button>
+            <button class="navbar-link" data-nav-link onclick="resetSidebar()">Experience</button>
           </li>
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link onclick="resetSidebar()">Bootcamp</button>
@@ -105,9 +105,9 @@
         </ul>
       </nav>
 
-      <article class="active" data-page="resume">
+      <article class="active" data-page="experience">
         <header>
-          <h2 class="h2 article-title gold">Resume</h2>
+          <h2 class="h2 article-title gold">Experience</h2>
         </header>
 
         <section class="timeline">
@@ -120,8 +120,8 @@
 
           <ol class="timeline-list">
             <li class="timeline-item">
-              <h2 class="h4 timeline-item-title">Full Resume Link</h2>
-              <a class="gold asset-link" href="assets/images/David_McNeill_RESUME1_7.pdf">View Full Resume</a>
+              <h2 class="h4 timeline-item-title">Resume Link</h2>
+              <a class="gold asset-link" href="assets/images/David_McNeill_RESUME1_7.pdf">View Resume</a>
             </li>
 
             <li class="timeline-item">
