--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <button class="navbar-link" data-nav-link onclick="resetSidebar()">Bootcamp</button>
           </li>
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link onclick="resetSidebar()">Portfolio</button>
+            <button class="navbar-link" data-nav-link onclick="resetSidebar()">Projects</button>
           </li>
 
           <li class="navbar-item">
@@ -301,9 +301,9 @@
         </div>
       </div>
 
-      <article class="portfolio" data-page="portfolio">
+      <article class="projects" data-page="projects">
         <header>
-          <h2 class="h2 article-title gold">Portfolio</h2>
+          <h2 class="h2 article-title gold">Projects</h2>
         </header>
 
         <section class="projects">
