--- a/index.html
+++ b/index.html
@@ -58,25 +58,13 @@
 
           <li class="contact-item">
             <div class="icon-box">
-              <ion-icon name="phone-portrait-outline"></ion-icon>
-            </div>
-
-            <div class="contact-info">
-              <p class="contact-title">Phone</p>
-
-              <a href="tel:+18046837779" class="contact-link">+1 (804) 683-7779</a>
-            </div>
-          </li>
-
-          <li class="contact-item">
-            <div class="icon-box">
               <ion-icon name="location-outline"></ion-icon>
             </div>
 
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Mechanicsville, VA, USA</address>
+              <address>VA, USA</address>
             </div>
           </li>
         </ul>
@@ -90,14 +78,10 @@
             <button class="navbar-link" data-nav-link onclick="resetSidebar()">Experience</button>
           </li>
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link onclick="resetSidebar()">Bootcamp</button>
+            <button class="navbar-link" data-nav-link onclick="resetSidebar()">CareerFoundry</button>
           </li>
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link onclick="resetSidebar()">Projects</button>
-          </li>
-
-          <li class="navbar-item">
-            <button class="navbar-link" data-nav-link onclick="resetSidebar()">Location</button>
           </li>
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link onclick="game()">Game</button>
@@ -156,10 +140,10 @@
         </section>
       </article>
 
-      <article class="bootcamp" data-page="bootcamp">
+      <article class="careerfoundry" data-page="careerfoundry">
         <section class="timeline">
           <header>
-            <h2 class="h2 article-title gold">Bootcamp</h2>
+            <h2 class="h2 article-title gold">CareerFoundry</h2>
           </header>
           <div class="title-wrapper">
             <div class="icon-box">
@@ -306,113 +290,117 @@
           <h2 class="h2 article-title gold">Projects</h2>
         </header>
 
-        <section class="projects">
-          <ul class="project-list">
-            <li class="project-item active" data-filter-item data-category="web development">
-              <figure class="project-img" id="img1">
-                <div class="project-item-icon-box">
-                  <ion-icon name="eye-outline"></ion-icon>
-                </div>
+        <section class="timeline">
 
-                <img src="./assets/images/camel-ss.png" alt="music" loading="lazy" />
-              </figure>
 
-              <h3 class="project-title">Live Music Archiver</h3>
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+            <h3 class="h3">Projects</h3>
+          </div>
+          <ol class="timeline-list">
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">
+                Bleached Solutions - Recent Projects
+              </h4>
+              <section class="projects" style="padding-top:20px">
+                <ul class="project-list">
+                  <li class="project-item active" data-filter-item data-category="web development">
+                    <figure class="project-img" id="img1">
+                      <div class="project-item-icon-box">
+                        <ion-icon name="eye-outline"></ion-icon>
+                      </div>
 
-              <a href="https://github.com/dlm1337/live-music-archiver-extension">
-                <p class="gold asset-link">Github - Click to visit</p>
-              </a>
+                      <img src="./assets/images/camel-ss.png" alt="music" loading="lazy" />
+                    </figure>
+
+                    <h3 class="project-title">Live Music Archiver</h3>
+
+                    <a href="https://github.com/dlm1337/live-music-archiver-extension">
+                      <p class="gold asset-link">Github - Click to visit</p>
+                    </a>
+                  </li>
+
+                  <li class="project-item active" data-filter-item data-category="web development">
+                    <figure class="project-img" id="img2">
+                      <div class="project-item-icon-box">
+                        <ion-icon name="eye-outline"></ion-icon>
+                      </div>
+
+                      <img src="./assets/images/Animatior-link.png" alt="unity" loading="lazy" />
+                    </figure>
+
+                    <h3 class="project-title">Unity</h3>
+
+                    <p class="project-category">2D games</p>
+                  </li>
+
+                  <li class="project-item active" data-filter-item data-category="web design">
+                    <figure class="project-img" id="img3">
+                      <div class="project-item-icon-box">
+                        <ion-icon name="eye-outline"></ion-icon>
+                      </div>
+
+                      <img src="./assets/images/prop12.jpg" alt="Appo" loading="lazy" />
+                    </figure>
+
+                    <h3 class="project-title">APPO Retreats</h3>
+
+                    <p class="project-category">Trip planning</p>
+                  </li>
+
+                  <li class="project-item active" data-filter-item data-category="applications">
+                    <figure class="project-img" id="img4">
+                      <div class="project-item-icon-box">
+                        <ion-icon name="eye-outline"></ion-icon>
+                      </div>
+
+                      <img src="./assets/images/receipt.png" alt="receiptify" loading="lazy" />
+                    </figure>
+
+                    <h3 class="project-title">Receiptify</h3>
+
+                    <p class="project-category">Reads images</p>
+                  </li>
+
+                  <li class="project-item active" data-filter-item data-category="web design">
+                    <figure class="project-img" id="img5">
+                      <div class="project-item-icon-box">
+                        <ion-icon name="eye-outline"></ion-icon>
+                      </div>
+
+                      <img src="./assets/images/ammo.png" alt="manos" loading="lazy" />
+                    </figure>
+
+                    <h3 class="project-title">Manos Ammo</h3>
+
+                    <p class="project-category">Store stock and info</p>
+                  </li>
+                  <li class="project-item active" data-filter-item data-category="web design">
+                    <figure class="project-img" id="img6">
+                      <div class="project-item-icon-box">
+                        <ion-icon name="eye-outline"></ion-icon>
+                      </div>
+
+                      <img src="./assets/images/bleachss.png" alt="manos" loading="lazy" />
+                    </figure>
+
+                    <h3 class="project-title">Bleached Solultions</h3>
+
+                    <a href="https://bleachedsolutions.com">
+                      <p class="gold asset-link">Website - Click to visit</p>
+                    </a>
+                  </li>
+                </ul>
+              </section>
             </li>
+          </ol>
 
-            <li class="project-item active" data-filter-item data-category="web development">
-              <figure class="project-img" id="img2">
-                <div class="project-item-icon-box">
-                  <ion-icon name="eye-outline"></ion-icon>
-                </div>
-
-                <img src="./assets/images/Animatior-link.png" alt="unity" loading="lazy" />
-              </figure>
-
-              <h3 class="project-title">Unity</h3>
-
-              <p class="project-category">2D games</p>
-            </li>
-
-            <li class="project-item active" data-filter-item data-category="web design">
-              <figure class="project-img" id="img3">
-                <div class="project-item-icon-box">
-                  <ion-icon name="eye-outline"></ion-icon>
-                </div>
-
-                <img src="./assets/images/prop12.jpg" alt="Appo" loading="lazy" />
-              </figure>
-
-              <h3 class="project-title">APPO Retreats</h3>
-
-              <p class="project-category">Trip planning</p>
-            </li>
-
-            <li class="project-item active" data-filter-item data-category="applications">
-              <figure class="project-img" id="img4">
-                <div class="project-item-icon-box">
-                  <ion-icon name="eye-outline"></ion-icon>
-                </div>
-
-                <img src="./assets/images/receipt.png" alt="receiptify" loading="lazy" />
-              </figure>
-
-              <h3 class="project-title">Receiptify</h3>
-
-              <p class="project-category">Reads images</p>
-            </li>
-
-            <li class="project-item active" data-filter-item data-category="web design">
-              <figure class="project-img" id="img5">
-                <div class="project-item-icon-box">
-                  <ion-icon name="eye-outline"></ion-icon>
-                </div>
-
-                <img src="./assets/images/ammo.png" alt="manos" loading="lazy" />
-              </figure>
-
-              <h3 class="project-title">Manos Ammo</h3>
-
-              <p class="project-category">Store stock and info</p>
-            </li>
-            <li class="project-item active" data-filter-item data-category="web design">
-              <figure class="project-img" id="img6">
-                <div class="project-item-icon-box">
-                  <ion-icon name="eye-outline"></ion-icon>
-                </div>
-
-                <img src="./assets/images/bleachss.png" alt="manos" loading="lazy" />
-              </figure>
-
-              <h3 class="project-title">Bleached Solultions</h3>
-
-              <a href="https://bleachedsolutions.com">
-                <p class="gold asset-link">Website - Click to visit</p>
-              </a>
-            </li>
-          </ul>
         </section>
+
       </article>
 
-
-      <article class="contact" data-page="location">
-        <header>
-          <h2 class="h2 article-title gold">Location</h2>
-        </header>
-
-        <section class="mapbox" data-mapbox>
-          <figure>
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d101116.41400953861!2d-77.42741248946786!3d37.628323699955544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b1180ccf023ea3%3A0xfc67a0544c0f3825!2sMechanicsville%2C%20VA!5e0!3m2!1sen!2sus!4v1663338148702!5m2!1sen!2sus"
-              width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </figure>
-        </section>
-      </article>
 
       <article class="game game-article" data-page="game">
         <header>
